--- a/app/src/main/res/layout/fragment_fizzbuzz_form.xml
+++ b/app/src/main/res/layout/fragment_fizzbuzz_form.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   xmlns:tools="http://schemas.android.com/tools">
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   tools:context=".presentation.fragments.FizzBuzzFormFragment">
     
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
@@ -56,6 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/layout_validate_button"
         />
     </LinearLayout>
