--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
 	
 	
 	<style name="ExaltTheme" parent="android:Theme.Light">
-		<item name="android:windowNoTitle">true</item>
+		<item name="android:windowNoTitle">false</item>
 	</style>
 	
 	<style name="FormField" parent="@style/ExaltTheme">
@@ -14,12 +14,15 @@
 		<item name="android:fontFamily">sans-serif</item>
 		<item name="colorAccent">#000000</item>
 		<item name="fontWeight">500</item>
+		<item name="android:gravity">center_vertical</item>
+		<item name="android:paddingBottom">20dp</item>
 	</style>
 	
 	<style name="Button_Layout" >
 		<item name="android:paddingStart">20dp</item>
 		<item name="android:paddingEnd">20dp</item>
 		<item name="android:gravity">center</item>
+		<item name="android:layout_marginStart">20dp</item>
 		<item name="background">@drawable/layout_validate_button</item>
 	</style>
 </resources>
