Fix the behaviour when rotates screen Add ic_launchers Small changes in UI Add translations

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,21 @@
 	</style>
 	
 	<style name="FormField" parent="@style/ExaltTheme">
-		<item name="android:layout_margin">4dip</item>
+		<item name="android:layout_margin">4dp</item>
+		<item name="android:paddingStart">5dp</item>
+		<item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+		<item name="android:background">@drawable/layout_form_field</item>
+		<item name="android:fontFamily">sans-serif</item>
+		<item name="colorAccent">#000000</item>
+		<item name="fontWeight">500</item>
+		<item name="android:singleLine">true</item>
+		<item name="android:paddingBottom">5dp</item>
+		<item name="android:paddingTop">5dp</item>
+		<item name="android:gravity">center_vertical</item>
+	</style>
+	
+	<style name="ShowTextView" parent="@style/ExaltTheme">
+		<item name="android:layout_margin">10dp</item>
 		<item name="android:paddingStart">5dp</item>
 		<item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
 		<item name="android:background">@drawable/layout_form_field</item>
@@ -15,14 +29,13 @@
 		<item name="colorAccent">#000000</item>
 		<item name="fontWeight">500</item>
 		<item name="android:gravity">center_vertical</item>
-		<item name="android:paddingBottom">20dp</item>
 	</style>
 	
-	<style name="Button_Layout" >
+	<style name="Button_Layout" parent="ShapeAppearanceOverlay.Material3.Button">
 		<item name="android:paddingStart">20dp</item>
 		<item name="android:paddingEnd">20dp</item>
 		<item name="android:gravity">center</item>
-		<item name="android:layout_marginStart">20dp</item>
+		<item name="android:textStyle">bold</item>
 		<item name="background">@drawable/layout_validate_button</item>
 	</style>
 </resources>
