--- a/app/src/main/res/layout/fragment_fizzbuzz_form.xml
+++ b/app/src/main/res/layout/fragment_fizzbuzz_form.xml
@@ -4,61 +4,69 @@
                                                    android:layout_height="match_parent"
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    tools:context=".presentation.fragments.FizzBuzzFormFragment">
+    <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
     
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:paddingHorizontal="20dp"
-                  android:paddingTop="10dp"
-                  android:orientation="vertical">
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:paddingHorizontal="20dp"
+                      android:paddingTop="10dp"
+                      android:orientation="vertical">
         
-        <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/text_input_first_word"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/FormField"
-                tools:text="Fizz"
-                android:hint="Fizz" />
-    
-        <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/text_input_second_word"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/FormField"
-                tools:text="Buzz"
-                android:hint="Buzz" />
-    
-        <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/text_input_first_multiple"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                style="@style/FormField"
-                android:hint="1" />
-    
-        <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/text_input_second_multiple"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/FormField"
-                android:inputType="number"
-                android:hint="2" />
-    
-        <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/text_input_limit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/FormField"
-                android:inputType="number"
-                android:hint="20" />
+            <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/text_input_first_word"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/FormField"
+                    tools:text="Fizz"
+                    android:hint="@string/first_word_title" />
         
-        <Button
-                android:id="@+id/button_validate"
-                android:text="@string/boutton_valider"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/layout_validate_button"
-        />
-    </LinearLayout>
+            <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/text_input_second_word"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/FormField"
+                    tools:text="Buzz"
+                    android:hint="@string/second_word_title" />
+        
+            <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/text_input_first_multiple"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    style="@style/FormField"
+                    android:hint="@string/first_multiple_title" />
+        
+            <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/text_input_second_multiple"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/FormField"
+                    android:inputType="number"
+                    android:hint="@string/second_multiple_title" />
+        
+            <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/text_input_limit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/FormField"
+                    android:inputType="number"
+                    android:hint="@string/limit_title" />
+        
+            <Button
+                    android:id="@+id/button_validate"
+                    android:text="@string/boutton_valider"
+                    android:textColor="@color/white"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginTop="20dp"
+                    style="@style/Button_Layout"
+                    />
+        </LinearLayout>
+        
+        
+    </androidx.core.widget.NestedScrollView>
+    
 </androidx.constraintlayout.widget.ConstraintLayout>
