--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,8 +23,12 @@
 	<style name="ShowTextView" parent="@style/ExaltTheme">
 		<item name="android:layout_margin">10dp</item>
 		<item name="android:paddingStart">5dp</item>
-		<item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
 		<item name="android:background">@drawable/layout_form_field</item>
+		<item name="android:gravity">center_vertical</item>
+	</style>
+	
+	<style name="FizzBuzzText" parent="@style/ExaltTheme">
+		<item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
 		<item name="android:fontFamily">sans-serif</item>
 		<item name="colorAccent">#000000</item>
 		<item name="fontWeight">500</item>
